chore: reuse Realm as Domain
