# server/src/database/tests.rs
@@ -104,7 +104,6 @@ fn create_user(realm: &str, username: &str, password: &str, change_password: boo
         password: hash_password_with_argon2(username, password).expect("Failed to hash password"),
         change_password,
         roles: Vec::new(),
-        domain: None,
     }
 }
 
