# server/src/database/trait.rs
@@ -51,7 +51,6 @@ pub trait Database: Send + Sync {
                 })?,
                 change_password: true,
                 roles: Vec::new(),
-                domain: None,
             };
             self.create_userpass(&app_user_pass).await?;
             // create the admin in the admin table
